--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,8 @@
     <script src="js/controllers/ExtensionsCtrl.js"></script>
     <script src="js/controllers/MotionCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/services/DBAService.js"></script>
+    <script src="js/services/UserService.js"></script>
 </head>
 <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
